# Multimodal_Google_Gemini

./: README.md  __init__.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
js/: hide_api_key.js
nodes/: gemini_node.py
prd/: ComfyUI_Gemini_Node_PRD_Creation.md
utils/: media.py
